Revision history for {{$dist->name}}

{{$NEXT}}

0.001002  2015-03-07 13:08:54-06:00 America/Chicago
 - Correctly munge the index html so links will work
   (Fixes GH#11)

0.001001  2015-01-01 17:50:29-06:00 America/Chicago
 - Fix release by adding stub App::Charon

0.001000  2015-01-01 17:34:48-06:00 America/Chicago
 - Initial Release (Happy New Year! 🎆 🎇 🎆 )