@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add a configuration system to allow users to set their own defaults
+   (Fixes GH#10)
 
 0.001002  2015-03-07 13:08:54-06:00 America/Chicago
  - Correctly munge the index html so links will work
